# ShellGen

./: README.md  pyproject.toml  shellgen.py
shellgen/: .gitignore  install.py  pyvenv.cfg  requriments.txt
shellgen/scripts/: aicommand.fish  aicommand.sh
shellgen/src/: setup.py  shellgen.py
